...
            "state": "translated",
            "value": "長按圖表時，現在會直接顯示每日的精確數值。"
          }
        }
      }
    },
    "Preview with Demo Data": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Preview with Demo Data"
          }
...
